fixing gap issue

--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@
 }
 #home{
     background-image: url(loginsec.jpeg);
+    background-position: center;
+    background-size: cover;
     height: 100vh;
     width: 100%;
     display: flex;
-    gap: 150px;
+    gap: 200px;
     justify-content: center;
     align-items: center;
     overflow: auto;
@@ -40,7 +42,7 @@
     transition: 0.4s;
 }
 #loginbtn:hover{
-    background-color: white;
+    background-color: transparent;
     color: black;
     border: 1px solid gray;
 }
@@ -54,4 +56,8 @@
 #btn a{
     color: blue;
     text-decoration: none;
+}
+#login{
+    display: none;
+    height: 100vh;
 }
